# QRsync

./: CMakeLists.txt  HelpViewer.cpp  HelpViewer.hpp  LICENSE.md  MainWindow.cpp  MainWindow.hpp  README.md  TECHNICAL DOCUMENTATION.md  main.cpp
